--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="request_otp">Request OTP</string>
     <string name="code_verification_msg">We have sent the code verification to</string>
     <string name="code_verification_msg_your">Your Mobile Number</string>
+    <string name="code_verification_msg_your_email">Your Email Address</string>
     <string name="submit">Submit</string>
     <string name="verification_code">Verification code</string>
     <string name="visit_profile">View Profile</string>
