App is committed at 15-1-25

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,6 +211,7 @@
     <string name="playing_squad">Playing Squad</string>
     <string name="replace_underlined"><u>Replace</u></string>
     <string name="leaderboard">Cricoscore Leaderboard</string>
+    <string name="info">Team Information</string>
 
 
 </resources>
